2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* about.src: Add all gnome modules and clarify a bit

2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add kefir (tepache fork)

2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* downloads.src: Add gnome-python-desktop, gnome-python-extras
	and change layout to keep old versions section at the end

2006-06-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* newsitems.py: Write correct article entry

2006-06-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: Add new article application-pygtk-glade
	* newsitems.py: Add new article entry

2006-06-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/application-pygtk-glade/Building_an_Application_with_PyGTK_and_Glade.htm
	* articles/application-pygtk-glade/resources/pywine_01.png
	* articles/application-pygtk-glade/resources/pywine_02.png
	* articles/application-pygtk-glade/resources/pywine_04.png
	* articles/application-pygtk-glade/resources/PyWine.tar.gz
	* articles/application-pygtk-glade/resources/small_pywine_03.png
	* articles/application-pygtk-glade/resources/small_pywine_05.png
	* articles/application-pygtk-glade/resources/somerights20.png
	* articles/application-pygtk-glade/resources/style.css: new article by
	Mark Mruss

2006-06-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add foff and gHDTV apps

2006-05-29  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update pyconsole URL

2006-05-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add Wine doors

2006-05-19  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: Add new article pygtk-glade-gui
	* newsitems.py: Add new article entry

2006-05-19  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/pygtk-glade-gui/Creating_a_GUI_using_PyGTK_and_Glade.htm
	* articles/pygtk-glade-gui/resources/directory01.png